# openapi.yaml
@@ -3,7 +3,7 @@ info:
   version: "0.0.1"
   title: Server
 # during dev, should point to your local machine
-host: 192.168.0.106:8080 #make sure you enter your IP or localhost
+host: localhost:8080 #make sure you enter your IP or localhost
 # basePath prefixes all resource paths
 basePath: /
 #
@@ -93,6 +93,9 @@ definitions:
       addpassword:
         type: string
         description: User Password
+      addrole:
+        type: string
+        description: User Role
 
   UserToken:
     type: object
