# routes/router.js
@@ -21,12 +21,14 @@ router.post('/', (req, res, next) => {
 
   connect.checkCon()
     .then(check_user.userok.bind(null, req.body.username, req.body.password, req.ip))
-    .then(function(){
+    .then(function(role){
       res.status(200).json({
           username: req.body.username,
+          role: role,
           jwt: jwt.sign({
               id: 1,
               login: req.body.username,
+              role: role
           },
           process.env.JWT_SECRET, { expiresIn: 3600 })
         });
@@ -47,7 +49,7 @@ router.post('/newuser', (req, res, next) => {
   connect.checkCon()
     .then(check_user.userok.bind(null, req.body.username, req.body.password, req.ip))
     .then(function(){
-      useradd.useradd(req.body.addusername, req.body.addpassword,function(message, response){
+      useradd.useradd(req.body.addusername, req.body.addpassword, req.body.addrole, function(message, response){
         if (response){
           res.status(200).json({
             message: message
@@ -62,6 +64,25 @@ router.post('/newuser', (req, res, next) => {
       res.status(400).json({message: err});
     });
 
+});
+
+router.post('/checkToken', (req, res, next) => {
+
+  if( req.hasOwnProperty('headers') && req.headers.hasOwnProperty('authorization') ){
+    let token = req.headers.authorization;
+    if(token === 'null'){
+      return res.status(401).json({message: "Bad Token"});
+    }
+    jwt.verify(token, process.env.JWT_SECRET, function(error, decoded){
+       if(error){
+         return res.status(401).json({message: "Bad Token"});
+       }else{
+         return res.status(200).json({message: true});
+       }
+     });
+  }else{
+    return res.status(401).json({message: "No Token"});
+  }
 });
 
 
